2015-01-19  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/53988
	* config/sh/sh-protos.h (sh_find_set_of_reg): Make sure not to return
	nullptr for insn when reaching the first insn.
	* config/sh/sh.c (sh_unspec_insn_p): Rewrite using subrtx_iterator.
	(sh_insn_operands_modified_between_p): Add nullptr check.
	(sh_find_extending_set_of_reg): Fix log message.  Don't accept
	sign extending mem load if the insn contains any UNSPEC or
	UNSPEC_VOLATILE.

2015-01-19  Jan Hubicka  <hubicka@ucw.cz>

	* params.def (inline-unit-growth): Drop to 15%.
	* invoke.texi (inline-unit-growth): Document change.

2015-01-19  Martin Liska  <mliska@suse.cz>

	PR ipa/64668
	* ipa-icf-gimple.c (func_checker::compare_operand): Call proper
	function for second argument of OBJ_TYPE_REF.

2015-01-19  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/64218
	* ipa-inline.c (want_inline_function_to_all_callers_p): Fix check
	whether function is an alias.

2015-01-19  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-devirt.c (ipa_devirt): Drop polymorphic call info in hopeless
	cases.

2015-01-19  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/64671
	* lra-remat.c (operand_to_remat): Don't consider jump and call
	insns.

2015-01-19  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/default64.h: Include rs6000-cpus.def.
	(TARGET_DEFAULT) [LITTLE_ENDIAN]: Use ISA 2.7 (POWER8).
	(TARGET_DEFAULT) [BIG_ENDIAN]: Use POWER4.
	* config/rs6000/driver-rs6000.c (detect_processor_aix): Add POWER7
	and POWER8.
	* config/rs6000/linux64.h (PROCESSOR_DEFAULT64): Always default to
	POWER8.
	* config/rs6000/rs6000.c (rs6000_file_start): Emit .machine
	pseudo-op to specify assembler dialect.

2015-01-19  Martin Liska  <mliska@suse.cz>

	PR ipa/64664
	* ipa-icf.c (sem_item_optimizer::filter_removed_items):
	Handle safe potentially removed nodes during filtering.

2015-01-19  Martin Liska  <mliska@suse.cz>

	* doc/extend.texi (no_icf): Add new attribute description.