@@ -1,3 +1,9 @@
+2015-01-19  Matthew Fortune  <matthew.fortune@imgtec.com>
+
+	* config/mips/mips.h (FP_ASM_SPEC): New define.
+	(ASM_SPEC): Remove floating-point options and use FP_ASM_SPEC
+	instead.
+
 2015-01-19  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	PR target/53988
